Fix squished TransferWise logo on iOS Safari (#95)
* Fix squished TransferWise logo on iOS Safari

* 3.2.2

* add changelog

--- a/src/PublicNavigation/Navigation/Logo/Logo.less
+++ b/src/PublicNavigation/Navigation/Logo/Logo.less
@@ -4,7 +4,7 @@
   height: 100%;
   .logo-text {
     float: left;
-    width: 100px;
+    width: 105px;
     height: 15px;
     background-repeat: no-repeat;
     background-position: center;
